--- a/nginx.conf
+++ b/nginx.conf
@@ -27,6 +27,7 @@ server {
 
 	location / {
 			 proxy_pass http://127.0.0.1:8000/;
+			 proxy_buffering off; 
                         # host and port to fastcgi server
 #                        fastcgi_pass 127.0.0.1:8801;
 #                        fastcgi_param PATH_INFO $fastcgi_script_name;
