CSS fix and merge

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,7 @@ server {
 	location / {
 			 proxy_pass http://127.0.0.1:8000/;
 			 proxy_buffering off; 
+			 proxy_set_header Host $http_host;
                         # host and port to fastcgi server
 #                        fastcgi_pass 127.0.0.1:8801;
 #                        fastcgi_param PATH_INFO $fastcgi_script_name;
