--- a/nginx.conf
+++ b/nginx.conf
@@ -26,21 +26,19 @@ server {
 	}
 
 	location / {
-			 proxy_pass http://127.0.0.1:8000/;
-			 proxy_buffering off; 
-			 proxy_set_header Host $http_host;
                         # host and port to fastcgi server
-#                        fastcgi_pass 127.0.0.1:8801;
-#                        fastcgi_param PATH_INFO $fastcgi_script_name;
-#                        fastcgi_param REQUEST_METHOD $request_method;
-#                        fastcgi_param QUERY_STRING $query_string;
-#                        fastcgi_param SERVER_NAME $server_name;
-#                        fastcgi_param SERVER_PORT $server_port;
-#                        fastcgi_param SERVER_PROTOCOL $server_protocol;
-#                        fastcgi_param CONTENT_TYPE $content_type;
-#                        fastcgi_param CONTENT_LENGTH $content_length;
-#                        fastcgi_pass_header Authorization;
-#                        fastcgi_intercept_errors off;
+		 	client_max_body_size 5000m;
+                        fastcgi_pass 127.0.0.1:8801;
+                        fastcgi_param PATH_INFO $fastcgi_script_name;
+                        fastcgi_param REQUEST_METHOD $request_method;
+                        fastcgi_param QUERY_STRING $query_string;
+                        fastcgi_param SERVER_NAME $server_name;
+                        fastcgi_param SERVER_PORT $server_port;
+                        fastcgi_param SERVER_PROTOCOL $server_protocol;
+                        fastcgi_param CONTENT_TYPE $content_type;
+                        fastcgi_param CONTENT_LENGTH $content_length;
+                        fastcgi_pass_header Authorization;
+                        fastcgi_intercept_errors off;
 	}
 
 	server_name cloudpub.us www.cloudpub.us;
